{
  "version": 4,
  "terraform_version": "1.6.4",
  "serial": 902,
  "lineage": "231c1a20-b60d-1d8d-d9be-6e9bc56c1a8f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion-host",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a0f1259dd1c90938",
            "arn": "arn:aws:ec2:ap-south-1:523535113198:instance/i-08f717e3a908dd6cc",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08f717e3a908dd6cc",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "my-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00dc6192a3a8e5821",
            "private_dns": "ip-10-5-101-167.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.5.101.167",
            "public_ip": "13.233.11.184",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-01e33452e50cb7b66",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04d849070271530eb",
            "tags": {
              "Name": "bastion-host-test",
              "provision": "terraform"
            },
            "tags_all": {
              "Name": "bastion-host-test",
              "provision": "terraform"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03b09ceb8f609ac26"
            ]
          },
          "dependencies": [
            "aws_db_instance.rds_mysql",
            "aws_instance.ec2-instance",
            "aws_security_group.pri-sg-1",
            "aws_security_group.pub-sg-1",
            "aws_security_group.rds-sg",
            "aws_subnet.subnets",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "first",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a0f1259dd1c90938",
            "arn": "arn:aws:ec2:ap-south-1:523535113198:instance/i-099b3cb8434926db2",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-099b3cb8434926db2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "my-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-02ea170aabe8c3777",
            "private_dns": "ip-10-5-1-207.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.5.1.207",
            "public_ip": "13.201.96.152",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-07fbc865b7096a49f",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05e2831c89b4369f2",
            "tags": {
              "Name": "bookstore-first",
              "provision": "terraform"
            },
            "tags_all": {
              "Name": "bookstore-first",
              "provision": "terraform"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c2f1b941275103a4"
            ]
          },
          "dependencies": [
            "aws_security_group.pri-sg-1",
            "aws_subnet.subnets",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "second",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a0f1259dd1c90938",
            "arn": "arn:aws:ec2:ap-south-1:523535113198:instance/i-0e06ded7367a90dba",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e06ded7367a90dba",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "my-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-02e60d3bec3ef9e2f",
            "private_dns": "ip-10-5-2-63.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.5.2.63",
            "public_ip": "65.1.93.62",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-06153de16dcbfc659",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a8d7a5e06732d339",
            "tags": {
              "Name": "bookstore-second",
              "provision": "terraform"
            },
            "tags_all": {
              "Name": "bookstore-second",
              "provision": "terraform"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c2f1b941275103a4"
            ]
          },
          "dependencies": [
            "aws_security_group.pri-sg-1",
            "aws_subnet.subnets",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nat-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a493f6d8c0886281",
            "arn": "arn:aws:ec2:ap-south-1:523535113198:instance/i-0352c07cbd8c24bec",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0352c07cbd8c24bec",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "my-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c377cba2b680a0ae",
            "private_dns": "ip-10-5-101-7.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.5.101.7",
            "public_ip": "13.233.142.138",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-0898f01d5f610613f",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-04d849070271530eb",
            "tags": {
              "Name": "Nat-instance",
              "provision": "terraform"
            },
            "tags_all": {
              "Name": "Nat-instance",
              "provision": "terraform"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03b09ceb8f609ac26"
            ]
          },
          "dependencies": [
            "aws_instance.ec2-instance",
            "aws_security_group.pri-sg-1",
            "aws_security_group.pub-sg-1",
            "aws_subnet.subnets",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:523535113198:internet-gateway/igw-0f18d609682b401e8",
            "id": "igw-0f18d609682b401e8",
            "owner_id": "523535113198",
            "tags": {
              "Name": "vpc-5-IGW"
            },
            "tags_all": {
              "Name": "vpc-5-IGW"
            },
            "vpc_id": "vpc-0b2d44c4b475191f4"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "ALB-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:523535113198:loadbalancer/app/bookstore-ALB/31f5cc3438de7231",
            "arn_suffix": "app/bookstore-ALB/31f5cc3438de7231",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "bookstore-ALB-576056404.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:523535113198:loadbalancer/app/bookstore-ALB/31f5cc3438de7231",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "bookstore-ALB",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0397ab0d4890ec2d1"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-03978cf92e2dacb37"
              },
              {
                "subnet_id": "subnet-04d849070271530eb"
              }
            ],
            "subnets": [
              "subnet-03978cf92e2dacb37",
              "subnet-04d849070271530eb"
            ],
            "tags": {
              "Name": "bookstore-ALB-1",
              "provision": "terraform"
            },
            "tags_all": {
              "Name": "bookstore-ALB-1",
              "provision": "terraform"
            },
            "vpc_id": "vpc-0b2d44c4b475191f4",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "aws_security_group.lb-sg",
            "aws_subnet.subnets",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "primary-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:523535113198:listener/app/bookstore-ALB/31f5cc3438de7231/ec6ef048815090f5",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:523535113198:targetgroup/bookstore-tg/72ad97d58b7825b2",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:523535113198:listener/app/bookstore-ALB/31f5cc3438de7231/ec6ef048815090f5",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:523535113198:loadbalancer/app/bookstore-ALB/31f5cc3438de7231",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.ALB-1",
            "aws_lb_target_group.ec2-target-grp",
            "aws_security_group.lb-sg",
            "aws_subnet.subnets",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "ec2-target-grp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:523535113198:targetgroup/bookstore-tg/72ad97d58b7825b2",
            "arn_suffix": "targetgroup/bookstore-tg/72ad97d58b7825b2",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:523535113198:targetgroup/bookstore-tg/72ad97d58b7825b2",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "bookstore-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "bookstore-tg",
              "provision": "terraform"
            },
            "tags_all": {
              "Name": "bookstore-tg",
              "provision": "terraform"
            },
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0b2d44c4b475191f4"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "ec2-target-grp-attachment-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-1:523535113198:targetgroup/bookstore-tg/72ad97d58b7825b2-20231226050406989400000005",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:523535113198:targetgroup/bookstore-tg/72ad97d58b7825b2",
            "target_id": "i-099b3cb8434926db2"
          },
          "dependencies": [
            "aws_instance.ec2-instance",
            "aws_lb_target_group.ec2-target-grp",
            "aws_security_group.pri-sg-1",
            "aws_subnet.subnets",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "ec2-target-grp-attachment-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-1:523535113198:targetgroup/bookstore-tg/72ad97d58b7825b2-20231226050407150500000006",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:523535113198:targetgroup/bookstore-tg/72ad97d58b7825b2",
            "target_id": "i-0e06ded7367a90dba"
          },
          "dependencies": [
            "aws_instance.ec2-instance",
            "aws_lb_target_group.ec2-target-grp",
            "aws_security_group.pri-sg-1",
            "aws_subnet.subnets",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:523535113198:route-table/rtb-03fc5f0df23727b9b",
            "id": "rtb-03fc5f0df23727b9b",
            "owner_id": "523535113198",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "eni-0c377cba2b680a0ae",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.5.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "local",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b2d44c4b475191f4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_instance.ec2-instance",
            "aws_instance.nat-instance",
            "aws_security_group.pri-sg-1",
            "aws_security_group.pub-sg-1",
            "aws_subnet.subnets",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:523535113198:route-table/rtb-0988fcf0a73d2b391",
            "id": "rtb-0988fcf0a73d2b391",
            "owner_id": "523535113198",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f18d609682b401e8",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b2d44c4b475191f4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-rt-association-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "first",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-074065e1da9626368",
            "route_table_id": "rtb-03fc5f0df23727b9b",
            "subnet_id": "subnet-05e2831c89b4369f2"
          },
          "dependencies": [
            "aws_instance.ec2-instance",
            "aws_instance.nat-instance",
            "aws_route_table.private-rt",
            "aws_security_group.pri-sg-1",
            "aws_security_group.pub-sg-1",
            "aws_subnet.subnets",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "fourth",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02c137372d5961b2b",
            "route_table_id": "rtb-03fc5f0df23727b9b",
            "subnet_id": "subnet-0c72ee9f0fd626758"
          },
          "dependencies": [
            "aws_instance.ec2-instance",
            "aws_instance.nat-instance",
            "aws_route_table.private-rt",
            "aws_security_group.pri-sg-1",
            "aws_security_group.pub-sg-1",
            "aws_subnet.subnets",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "second",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f222b0a40d817368",
            "route_table_id": "rtb-03fc5f0df23727b9b",
            "subnet_id": "subnet-0a8d7a5e06732d339"
          },
          "dependencies": [
            "aws_instance.ec2-instance",
            "aws_instance.nat-instance",
            "aws_route_table.private-rt",
            "aws_security_group.pri-sg-1",
            "aws_security_group.pub-sg-1",
            "aws_subnet.subnets",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "third",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-091f9f70451ad1e4e",
            "route_table_id": "rtb-03fc5f0df23727b9b",
            "subnet_id": "subnet-00cd682996010f8df"
          },
          "dependencies": [
            "aws_instance.ec2-instance",
            "aws_instance.nat-instance",
            "aws_route_table.private-rt",
            "aws_security_group.pri-sg-1",
            "aws_security_group.pub-sg-1",
            "aws_subnet.subnets",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-rt-association-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "first",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a8b669e593e8d11f",
            "route_table_id": "rtb-0988fcf0a73d2b391",
            "subnet_id": "subnet-04d849070271530eb"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_route_table.public-rt",
            "aws_subnet.subnets",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "second",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0509d49d6f74b76c9",
            "route_table_id": "rtb-0988fcf0a73d2b391",
            "subnet_id": "subnet-03978cf92e2dacb37"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_route_table.public-rt",
            "aws_subnet.subnets",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:523535113198:security-group/sg-0397ab0d4890ec2d1",
            "description": "allow all incoming traffic on port 80",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0397ab0d4890ec2d1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "lb-sg-1",
            "name_prefix": "",
            "owner_id": "523535113198",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "lb-sg-1",
              "provision": "terraform"
            },
            "tags_all": {
              "Name": "lb-sg-1",
              "provision": "terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b2d44c4b475191f4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "pri-sg-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:523535113198:security-group/sg-0c2f1b941275103a4",
            "description": "allow all incoming traffic only from vpc cidr range",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c2f1b941275103a4",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.5.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "pri-sg-1",
            "name_prefix": "",
            "owner_id": "523535113198",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "pri-sg-1",
              "provision": "terraform"
            },
            "tags_all": {
              "Name": "pri-sg-1",
              "provision": "terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b2d44c4b475191f4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "pub-sg-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:523535113198:security-group/sg-03b09ceb8f609ac26",
            "description": "allow all incoming traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03b09ceb8f609ac26",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "pub-sg-1",
            "name_prefix": "",
            "owner_id": "523535113198",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "pub-sg-1",
              "provision": "terraform"
            },
            "tags_all": {
              "Name": "pub-sg-1",
              "provision": "terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b2d44c4b475191f4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:523535113198:security-group/sg-05a5faa416d2d2247",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05a5faa416d2d2247",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.5.0.0/16"
                ],
                "description": "allow port 3306 for rds",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "rds-sg",
            "name_prefix": "",
            "owner_id": "523535113198",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "rds-sg",
              "provision": "terraform"
            },
            "tags_all": {
              "Name": "rds-sg",
              "provision": "terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b2d44c4b475191f4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "pri-sub-1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:523535113198:subnet/subnet-05e2831c89b4369f2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.5.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05e2831c89b4369f2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "523535113198",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pri-sub-1",
              "provision": "terraform"
            },
            "tags_all": {
              "Name": "pri-sub-1",
              "provision": "terraform"
            },
            "vpc_id": "vpc-0b2d44c4b475191f4"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "pri-sub-2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:523535113198:subnet/subnet-0a8d7a5e06732d339",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.5.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a8d7a5e06732d339",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "523535113198",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pri-sub-2",
              "provision": "terraform"
            },
            "tags_all": {
              "Name": "pri-sub-2",
              "provision": "terraform"
            },
            "vpc_id": "vpc-0b2d44c4b475191f4"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "pri-sub-3",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:523535113198:subnet/subnet-00cd682996010f8df",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.5.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00cd682996010f8df",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "523535113198",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pri-sub-3",
              "provision": "terraform"
            },
            "tags_all": {
              "Name": "pri-sub-3",
              "provision": "terraform"
            },
            "vpc_id": "vpc-0b2d44c4b475191f4"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "pri-sub-4",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:523535113198:subnet/subnet-0c72ee9f0fd626758",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.5.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c72ee9f0fd626758",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "523535113198",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pri-sub-4",
              "provision": "terraform"
            },
            "tags_all": {
              "Name": "pri-sub-4",
              "provision": "terraform"
            },
            "vpc_id": "vpc-0b2d44c4b475191f4"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "pub-sub-1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:523535113198:subnet/subnet-04d849070271530eb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.5.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04d849070271530eb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "523535113198",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub-sub-1",
              "provision": "terraform"
            },
            "tags_all": {
              "Name": "pub-sub-1",
              "provision": "terraform"
            },
            "vpc_id": "vpc-0b2d44c4b475191f4"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "pub-sub-2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:523535113198:subnet/subnet-03978cf92e2dacb37",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.5.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03978cf92e2dacb37",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "523535113198",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub-sub-2",
              "provision": "terraform"
            },
            "tags_all": {
              "Name": "pub-sub-2",
              "provision": "terraform"
            },
            "vpc_id": "vpc-0b2d44c4b475191f4"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:523535113198:vpc/vpc-0b2d44c4b475191f4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.5.0.0/16",
            "default_network_acl_id": "acl-03173bc5800b06d7d",
            "default_route_table_id": "rtb-0a33130fd1e8ffa83",
            "default_security_group_id": "sg-0a8b77822c70bfd65",
            "dhcp_options_id": "dopt-0e169614388d8464a",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b2d44c4b475191f4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a33130fd1e8ffa83",
            "owner_id": "523535113198",
            "tags": {
              "Name": "vpc-5",
              "provision": "terraform"
            },
            "tags_all": {
              "Name": "vpc-5",
              "provision": "terraform"
            }
          }
        }
      ]
    }
  ]
}